--- a/day01/05-data-types.html
+++ b/day01/05-data-types.html
@@ -53,6 +53,7 @@
         };
         console.log(person);
         console.log(typeof person);
+        console.log(isNaN(person));
 
         //Array
         var colors=["red","green","blue"];
