--- a/day10/42-find-number-game.html
+++ b/day10/42-find-number-game.html
@@ -17,7 +17,7 @@
 
     <h2 style="text-align: center;">Find Number Game</h2>
 
-    <div class="container-fluid  card">
+    <div class="container-fluid bg-primary-subtle card d-flex " >
         <div class="row">
             <div class="col-12">
                 <input type="number" id="num" placeholder="Tahmininizi giriniz">
